infrastructure/gateway-spike/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gwtest
  namespace: gateway
  annotations:
    io.cilium/lb-ipam-ips: "192.168.1.242"
spec:
  gatewayClassName: cilium
  listeners:
    - name: gwtest-https
      protocol: HTTPS
      port: 443
      hostname: gwtest.i.recompiled.org
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gwtest-tls
      allowedRoutes:
        namespaces:
          from: All
