infrastructure/gateway-spike/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gwtest-externalauth
  namespace: auth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gwtest
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  parentRefs:
    - name: gwtest
      namespace: gateway
      sectionName: gwtest-https
  hostnames:
    - gwtest.i.recompiled.org
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: oauth2-proxy
              namespace: auth
              port: 4180
      backendRefs:
        - name: hubble-ui
          port: 80
